z-index / nav fixes

--- a/ux3/css/style.css
+++ b/ux3/css/style.css
@@ -25,13 +25,23 @@ p{
 	margin:10px 0 0;
 }
 
-a{
+a:link{
 	text-decoration: none;	
 }
 
 a:visited{
 	color: inherit;
 }
+
+a:hover{
+	color: inherit;
+}
+
+a:active{
+	color: inherit;
+}
+
+
 
 header{
 	position: fixed;
@@ -54,6 +64,7 @@ nav{
 	-moz-box-shadow: 0px 0px 9px -1px rgba(0,0,0,0.25);
 	-o-box-shadow: 0px 0px 9px -1px rgba(0,0,0,0.25);
 	box-shadow: 0px 0px 9px -1px rgba(0,0,0,0.25);
+	z-index:3;
 }
 
 ul{
@@ -96,7 +107,7 @@ input[type="text"]{
     -moz-transform: translateX(-50%);
     -o-transform: translateX(-50%);
     transform: translateX(-50%);
-    z-index: 4;
+    z-index: 1;
 }
 
 input[type="text"]:hover{
@@ -231,10 +242,18 @@ footer a:hover{
 	margin:10px 0;
 }
 
+.icons:visited{
+	color: inherit;
+}
+
 .icons:hover{
 	border:0.1em solid #e4e4e4;
 	cursor:pointer;
 	text-decoration: none;
+}
+
+.icons:active{
+
 }
 
 .icons img{
@@ -371,7 +390,7 @@ footer a:hover{
     position: relative;
     top: 35px;
     left: -1.25%;
-    z-index: 3;
+    z-index: 2;
     width: 102.51%;
 	font-size:1em;
 	font-weight:600;
